add shared util for global logic config and added to shared preferences

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   flare_flutter: ^3.0.2
+  shared_preferences: ^2.2.0
 
 dev_dependencies:
   flutter_test:
