--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
     sdk: flutter
   flare_flutter: ^3.0.2
   shared_preferences: ^2.2.0
+  cached_network_image: ^3.2.3
 
 dev_dependencies:
   flutter_test:
